# coup

./: .gitignore  Dockerfile  Makefile  README.md  UI.excalidraw
rustapp/: Cargo.toml  QA TEST.txt
rustapp/benches/: constraint_benchmark.rs  my_benchmark.rs
rustapp/src/: ChallengeConsolidatingMath.xlsx  cfr.rs  history.rs  history_public.rs  lib.rs  main.rs  paths no results no block results.txt  paths no results.txt  paths.txt  pcmccfr.rs  prob_manager.rs  rebel.rs  statehistory.rs  string_utils.rs  unittests.rs
rustapp/src/cfr/: action_serialiser.rs  best_response_policy.rs  exchangedraw_map.rs  explorer.rs  explorer_new.rs  inference_buffer.rs  keys.rs  mixed_strategy_policy.rs  policy_handler.rs  reach_prob.rs  rewards_store.rs  value_function.rs
rustapp/src/prob_manager/: backtracking.md  backtracking_collective_constraints.rs  backtracking_collective_constraints_lazy.rs  backtracking_collective_constraints_light.rs  backtracking_collective_constraints_lite.rs  backtracking_prob.rs  backtracking_prob_2.rs  backtracking_prob_hybrid.rs  bit_prob.rs  bitconstraint.rs  bitconstraint_iterative.rs  brute_prob.rs  brute_prob_generic.rs  card_state.rs  collective_constraint.rs  compressed_group_constraint.rs  constants.rs  constraint.rs  coup_const.rs  coup_transition_maps.rs  documentation.md  explorer.rs  loader.rs  move_guard.rs  naive_prob.rs  naive_sampler.rs  path_dependent_collective_constraint.rs  path_dependent_prob.rs  permutation_generator.rs  prob_state.rs  prob_state_old.rs  recursion_fn.rs
rustapp/src/prob_manager/card_state/: card_state_u64.rs
rustapp/src/prob_manager/engine/: constants.rs  fsm_engine.rs
rustapp/src/prob_manager/engine/models/: assassinate.rs  coup.rs  end.rs  engine_state.rs  exchange.rs  foreign_aid.rs  game_state.rs  steal.rs  tax.rs  turn_start.rs
rustapp/src/prob_manager/models/: backtrack.rs  backtrack_metadata.rs  card_state_u64.rs
rustapp/src/prob_manager/models/backtrack/: action_info.rs  impossible_field_1.rs  impossible_field_2.rs  impossible_field_3.rs  info_array.rs  info_array_bits.rs  info_array_minimal.rs  info_array_trait.rs  mode.rs
rustapp/src/prob_manager/tools/: recursion_fn.rs
rustapp/src/prob_manager/tracker/: card_count_tracker.rs  collater.rs  informed_tracker.rs  naive_tracker.rs  uninformed_tracker.rs
rustapp/src/prob_manager/tracker/collater/: indicate.rs  permute.rs  unique.rs
rustapp/src/prob_manager/utils/: permutation_generator.rs
rustapp/src/referee/: self_play.rs
rustapp/src/traits/prob_manager/: card_state.rs  coup_analysis.rs
rustgame/: Cargo.toml
rustgame/src/: Replay.rs  game.rs  gamestate.rs  main.rs  models.rs  player.rs
rustgame/src/models/: ActionFactory.rs  Assassinate.rs  Block.rs  Challenge.rs  Coup.rs  Discard.rs  Exchange.rs  ForeignAid.rs  Income.rs  Pass.rs  Receive.rs  RevealShuffle.rs  StandardActions.rs  StandardActionsCoup.rs  Steal.rs  Tax.rs  TurnStart.rs
