[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
lazy_static = "1.4"
num = "0.4"
ndarray = "0.15"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
rayon = "1.5.1"
indexmap = "2.2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.9.0"
crossbeam = "0.8"
tokio = {version = "1.37", features = ["full"]}
ahash = "0.8"
nohash-hasher = "0.2.0"
dashmap = "6.0.1"

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}

[[bench]]
name = "my_benchmark"
harness = false

[[bench]]
name = "constraint_benchmark"
harness = false

[[bin]]
name = "rustapp"
path = "src/main.rs"

[[bin]]
name = "constraint_test"
path = "src/bin/constraint_test.rs"

[build]
target-dir = "D:/stuff/Code Project Folder/Coup AI/rustapp"

[profile.release-lto]
inherits = "release"
lto = true