[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
lazy_static = "1.4"
num = "0.4"
ndarray = "0.15"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
rayon = "1.5.1"
indexmap = "2.2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.9.0"
crossbeam = "0.8"
tokio = {version = "1.37", features = ["full"]}
ahash = "0.8"
nohash-hasher = "0.2.0"
dashmap = "6.0.1"
itertools = "0.14.0"

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}

[[bin]]
name = "rustapp"
path = "src/main.rs"

[[bin]]
name = "card_count_validation"
path = "src/bin/card_count_validation.rs"

[[bin]]
name = "fsm_val_rand"
path = "src/bin/fsm_val_rand.rs"

[build]
target-dir = "D:/stuff/Code Project Folder/Coup AI/rustapp"

[profile.release-lto]
inherits = "release"
lto = true

[profile.release-debug]
inherits = "release"
opt-level = 3
debug-assertions = true    # keep `debug_assert!` enabled
overflow-checks = true     # (optional) bounds‐check on integer ops